Fix preference test on list item